--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "mysql2": "^3.16.2"
   },
   "devDependencies": {
