--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
-    "mysql2": "^3.16.2"
+    "mysql2": "^3.16.2",
+    "nodemailer": "^7.0.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
